--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "immer": "^7.0.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,7 +28,8 @@
     "react-scripts": "4.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/yup": "^0.29.9"
   }
 }
